--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "pydantic>=2.11.5",
+    "pyyaml>=6.0.2",
     "rich>=14.0.0",
     "typer>=0.16.0",
 ]
