--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,9 @@ theme:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
+  - Commands: commands.md
+
+
 
 plugins:
   - search
@@ -31,4 +34,4 @@ plugins:
         python:
           setup_commands:
             - import sys
-            - sys.path.append("src")
+            - sys.path.append(".")
