--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,7 +31,6 @@ plugins:
   - search
   - mkdocstrings:
       handlers:
-        python:
-          setup_commands:
-            - import sys
-            - sys.path.append(".")
+        python: {}
+
+
