--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build the site
         run: mkdocs build
 
+      - name: Add CNAME file
+        run: echo "xolo.ronnyascencio.com" > ./site/CNAME
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
